crates/tests/src/snapshots/fe_compiler_tests__compile_errors__not_callable.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: the u256 type is not callable
  ┌─ compile_errors/not_callable.fe:4:9
  │
4 │         5()
  │         ^ this has type u256


